<resources>
    <string name="app_name">BlogApp</string>
    <string name="pass_hint">Password...</string>
    <string name="Email_hint">Your Email...</string>
    <string name="login_logo">Logo Login Page</string>
    <string name="login_btn_text">Login to Account</string>
    <string name="login_reg_btn_text">NEED A NEW ACCOUNT ?</string>
    <string name="action_search_text">search</string>
    <string name="action_settings_text">Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="regLoginText">Already have an Account?</string>
    <string name="regBtnText">Create Account</string>
    <string name="regPasswordText">Password...</string>
    <string name="regConfirmPasswordText">ConfirmPassword...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post Blog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
